objects/MemberInsight__c.object
<CustomObject>
    <description>An object for user created insights on the member record page.</description>
    <fields>
        <fullName>ContactID__c</fullName>
        <description>Links the insight to a member</description>
        <label>Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Member Insights</relationshipLabel>
        <relationshipName>Member_Insights</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <description>The expiration date for an insight - optional</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExtraDetails__c</fullName>
        <description>Any additional details the MCC agent determines is important and notable but is longer than the title</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Extra Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>InsightType__c</fullName>
        <description>Insight type is defined by the categories we determine are needed for insights</description>
        <label>Insight Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Declined</fullName>
                    <label>Declined (Phone Password, eBranch, etc.)</label>
                </value>
                <value>
                    <fullName>Fraud</fullName>
                </value>
                <value>
                    <fullName>Gender</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Military</fullName>
                </value>
                <value>
                    <fullName>Name Pronunciation</fullName>
                </value>
                <value>
                    <fullName>Touch Tone Teller</fullName>
                </value>
                <value>
                    <fullName>Declined Phone Password</fullName>
                    <isActive>false</isActive>
                    <label>Declined Phone Password</label>
                </value>
                <value>
                    <fullName>Fruad</fullName>
                    <isActive>false</isActive>
                    <label>Fruad</label>
                </value>
                <value>
                    <fullName>No Cross Sell</fullName>
                    <isActive>false</isActive>
                    <label>No Cross Sell</label>
                </value>
                <value>
                    <fullName>No Self Help</fullName>
                    <isActive>false</isActive>
                    <label>No Self Help</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Member Insight</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Member Insight Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Member Insights</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>